--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "booklet",
+  "homepage": "https://m4rku5.github.io/booklet/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pageflip": "^2.0.3"
