--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "booklet",
-  "homepage": "https://m4rku5.github.io/booklet/",
+  "homepage": "https://m4rku5c.github.io/booklet/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
